--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-numpy==1.23.5
-opencv-python-headless==4.5.5.64
-google-generativeai>=0.3.0
 python-telegram-bot==13.7
-torch>=1.12.0
+pillow
+google-genai
